# mozn-postprocessing-system

./: .env.example  .gitignore  DIRECTORY_TREE.txt  README.md  pyproject.toml
.github/workflows/: README.md  deploy-check.yml  training-smoke.yml
configs/: deployment.yaml  inference.yaml  logging.yaml  models.yaml  paths.yaml  schema.yaml  stations.yaml  targets.yaml  training.yaml
configs/mappings/: station_raw_column_mapping_v1.yaml
configs/validation/: station_validation_rules.yaml
data/: README.md
data/manifests/: openmeteo_fetch_20260427_142155.json  openmeteo_fetch_20260427_144032.json  raw_files.csv  raw_station_columns_v1.csv  station_registry.csv
deployment/: README.md
docs/: PHASE_0_LOCK.md  WORKING_RULES.md
docs/data/: DATA_CONTRACT.md  DATA_SOURCES.md  MANIFEST_RULES.md
notebooks/diagnostics/: eda_v2_improved_dataset.ipynb
notebooks/validation/: eda_v3_second_station_test.ipynb
reports/diagnostics/: raw_station_profile_v1.json  station_validation_by_station.csv  station_validation_by_target.csv  station_validation_by_variable.csv  station_validation_summary.json
requirements/: README.md  base.txt  dev.txt  installed_snapshot.txt  prod.txt  research.txt
scripts/: README.md  benchmark_all_targets.py  bootstrap.ps1  bootstrap.sh  build_canonical_table.py  build_parquet.py  run_inference.py  serve_api.py  train_all_targets.py  train_experimental_models.py
scripts/data/: build_standardized_station_table.py  convert_station_csv_to_parquet.py  fetch_openmeteo_baselines.py  inspect_baselines.py  inspect_station_csv.py  (+1 more)
tests/: README.md
(+179 files in other folders)
